# sleep-blocker

./: .clang-format  .clangd  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml  release.yml  sanitizer.yml  static-analysis.yml
include/app/: application.hpp  sleep_inhibitor.hpp
include/core/: concepts.hpp  glfw_init.hpp  sdl_init.hpp  window.hpp
include/renderer/: background_texture.hpp  imgui_backend.hpp  imgui_backend_glfw.hpp  imgui_backend_sdl.hpp  renderer.hpp  ui.hpp  widgets.hpp
include/sleep/: sleep_inhibitor.hpp
include/utils/: command.hpp  status.h  status.hpp  timer_preset.hpp
include/window/: app_glfw_window.hpp  app_sdl_window.hpp  app_window.hpp  concepts.hpp
resources/: app.rc
src/: main.cpp
src/app/: application.cpp
src/app/linux/: sleep_inhibitor.cpp
src/app/windows/: sleep_inhibitor.cpp
src/renderer/: background_texture.cpp  ui.cpp
src/sleep/linux/: sleep_inhibitor.cpp
src/sleep/windows/: sleep_inhibitor.cpp
src/window/: app_glfw_window.cpp  app_sdl_window.cpp
tools/: embed_file.py
